criando rota de planos e gerando a doc no swagger
