# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\API\Client\AuthController;
 use App\Http\Controllers\HostingAccountController;
+use App\Http\Controllers\Plans\PlanController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -19,4 +20,13 @@ Route::prefix('hosting-accounts')->group(function () {
     Route::put('/{id}', [HostingAccountController::class, 'update']);
     Route::delete('/{id}', [HostingAccountController::class, 'destroy']);
     Route::get('/client/{clientId}', [HostingAccountController::class, 'showByClient']);
+});
+
+
+Route::prefix('plans')->group(function () {
+    Route::get('/', [PlanController::class, 'index']);
+    Route::post('/', [PlanController::class, 'store']);
+    Route::get('/{id}', [PlanController::class, 'show']);
+    Route::put('/{id}', [PlanController::class, 'update']);
+    Route::delete('/{id}', [PlanController::class, 'destroy']);
 });
